# caged_api_DESENVOLVIMENTO

./: .env  .env.example  .gitignore  BACKLOG.md  README.md  historico_arquitetonico.md  main.py  planejamento_arquitetura_api.md  pyproject.toml  requirements.txt
caged_api 4 DEPLOY/: README.md  main.py  planejamento_arquitetura_api.md  pyproject.toml  requirements.txt
caged_api 4 DEPLOY/src/api/: __init__.py  app.py
caged_api 4 DEPLOY/src/scripts/: criar_tabelas.py
caged_api 4 DEPLOY/src/testes/: teste_busca.py  teste_conexao.py  teste_insercao.py  teste_repositorio.py
caged_api 5 COMMIT/src/api/: __init__.py
caged_api 5 COMMIT/src/scripts/: criar_tabelas.py
caged_api 5 COMMIT/src/testes/: teste_busca.py  teste_conexao.py  teste_insercao.py  teste_repositorio.py
src/api/: __init__.py  app.py
src/api/banco/: conexao.py  models.py  repositorio.py
src/api/coleta/: base.py
src/api/routers/: __init__.py  caged.py  ibge.py
src/api/services/: atualizacao_caged.py
src/api/transformacao/: ibge.py
src/collectors/: base.py  caged.py  ibge.py
src/core/: logging.py  settings.py
src/database/: __init__.py  conexao.py  models.py  repositorio.py
src/scheduler/: scheduler.py
src/schemas/: caged.py
src/scripts/: criar_tabelas.py
src/services/: __init__.py  atualizacao_caged.py
src/testes/: teste_busca.py  teste_conexao.py  teste_insercao.py  teste_repositorio.py
src/transformers/: __init__.py  app.py  caged.py  ibge.py  repositorio.py
tests/testes/: teste_busca.py  teste_conexao.py  teste_insercao.py  teste_repositorio.py
(+20 files in other folders)
