[project]
name = "caged-api"
version = "0.1.0"
description = "API para coleta, transformação e disponibilização dos dados do CAGED de Joinville."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
    "apscheduler>=3.11.3",
]

[dependency-groups]
dev = [
    "black",
    "httpx",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true